@@ -43,6 +43,10 @@ CHANGES
 
     Squashed a non-numerical warning in Badger::Timestamp.
 
+    Refactored parts of Badger::Config and added Badger::Config::Files.
+
+    Added the UTF8, JSON and YAML constants to Badger::Constants.
+
   Version 0.09 - 8th February 2012
     Added Badger::Codec::Timestamp. Changed Badger::Timestamp to numify
     values to remove leading zeroes (e.g. 2012/04/20 now yields a month of 4
